# jackal_active_inference_versus_kalman_filter

./: .sync.ffs_db  CMakeLists.txt  LICENSE  README.md  package.xml
bagfiles/: kalman_ref_data.bag
config/: jackal_robot_control.yaml
doc/: system_overview.md
launch/: jackal_empty_world.launch
matlab/: ai.m  ai_control.m  analyze_process_noise_using_mse.m  generate_pi.m  kalman.m  kalman_control.m  linsys_fit_gazebo.m  linsys_fit_gazebo_fminsearch.m  linsys_fit_gazebo_fminsearch_objfun.m  linsys_fit_gazebo_u-y.mat  linsys_fit_gazebo_u-y_interpolated.mat  rosbag_readout_auto.m  store_bagdata.m
msg/: filt_output.msg  gazebo_model_states_noise.msg
scripts/: active_inference.py  auto_motion.py  kalman.py  read_gazebo_data.py
worlds/: empty.world
