<?xml version="1.0"?>
<package format="2">
  <name>jackal_active_inference_versus_kalman_filter</name>
  <version>0.0.0</version>
  <description>Controlling the existing Jackal simulation in Gazebo (built by Clearpath Robotics Inc.) and using the simulation data to run an Active Inference algorithm and Kalman filter</description>

  <maintainer email="D.Benders@student.tudelft.nl">activeinference</maintainer>

  <license>BSD, Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>jackal_gazebo</exec_depend>
</package>
